test_suite/alan-2022-examples/failing/007830_mutation.alan
source l1 begin while 3 do relax, end end
